--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@
 
   .offline-show img {
     max-width: 97%;
+    height: 100%;
     position: relative;
     z-index: 2;
   }
@@ -226,14 +227,107 @@
     border: 2px solid rgba(255, 255, 255, 0.25);
     border-radius: 0.75em;
     position: absolute;
-    top: 196%;
+    top: 233%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 3;
   }
 
   .offline-show-play .offline-show-img img {
     height: 50px;
   }
 
+  .offline-show .offline-show-play .offline-show-text {
+    text-align: center;
+    margin-right: 80px;
+  }
+
+  .offline-show-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .offline-show-text #text {
+    margin-left: -90px;
+    font-weight: 400;
+  }
+
+  .offline-show .offline-show-play .offline-show-text::after {
+    width: 3em;
+    height: 2em;
+    outline: 2px solid #000;
+    outline-offset: -2px;
+    display: block;
+    background: url(https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif)
+      center center no-repeat;
+    background-size: 100%;
+    content: '';
+    float: right;
+    margin-right: -90px;
+    /* padding-left: -50px; */
+    padding-top: -240px;
+  }
+
   /* OFFLINE SHOW SECTION ENDS */
+
+  /* WATCH EVERYWHERE SECTION STARTS */
+
+  .main-section #watch-everywhere {
+    border-top: 8px solid #222;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #watch-everywhere {
+    background-color: #000;
+    padding: 60px 10px;
+    color: #fff;
+    text-align: center;
+  }
+
+  #watch-everywhere h1 {
+    font-size: 26px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    letter-spacing: 0.7px;
+  }
+
+  #watch-everywhere h2 {
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  /* WATCH EVERYWHERE SECTION ENDS */
+
+  /* KIDS PROFILE SECTION STARTS */
+  .main-section #kid-profile {
+    border-top: 8px solid #222;
+  }
+
+  #kid-profile {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 55px 10px;
+  }
+
+  #kid-profile h1 {
+    font-size: 26px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    letter-spacing: 0.7px;
+  }
+
+  #kid-profile h2 {
+    padding: 0 10px;
+    font-weight: 400;
+    padding-bottom: 17px;
+  }
+
+  #kid-profile img {
+    max-width: 96%;
+  }
+  /* KIDS PROFILE SECTION ENDS */
 }
