remove show-text on btn click

--- a/styles.css
+++ b/styles.css
@@ -414,7 +414,7 @@
   .cancel-icon {
     display: none;
   }
-  .show-text .minus-icon {
+  .show-text .cancel-icon {
     display: inline;
   }
   .show-text .plus-icon {
